--- a/lib/cg_pmulticompar.wiki
+++ b/lib/cg_pmulticompar.wiki
@@ -87,9 +87,7 @@ alread present in the multicompar file. The default (0) is to skip these.
 with an error if no sreg or varall file is found for a sample. If 1 (default), it will
 give a warning, but continue making the multicompar file (incomplete for this sample)
 
-supports job options (more info with cg help joboptions):
-; **-d number**: distribute subjobs of command over **number** processes
-; **-d sge**: use grid engine to distribute subjobs
+This command can be distributed on a cluster or using multiple with [[joboptions|job options]] (more info with cg help joboptions)
 
 == Category ==
 Compare
