--- a/lib/cg_process_illumina.wiki
+++ b/lib/cg_process_illumina.wiki
@@ -96,9 +96,7 @@ if 1, bam files are realigned using gatk, use **value** srma to align using srma
 of resulting variants. This option can be added multiple times (with different files)
 ; **-bedfile bedfile**: if bedfile is provided, coverage statistics will be calculated for this region using picard CalculateHsMetrics
 
-supports job options (more info with cg help joboptions):
-; **-d number**: distribute subjobs of command over **number** processes
-; **-d sge**: use grid engine to distribute subjobs
+This command can be distributed on a cluster or using multiple with [[joboptions|job options]] (more info with cg help joboptions)
 
 == Dependencies ==
 Some of the programs needed in this workflow are not distributed with genomecomb. 
