--- a/lib/cg_process_multicompar.wiki
+++ b/lib/cg_process_multicompar.wiki
@@ -27,9 +27,7 @@ create the projectinfo.tsv file.
 ; **-dbdir dbdir**: **dbdir** can also be given as an option (instead of second parameter)
 ; **-dbfile file**: Use **file** for extra (files in **dbdir** are already used) annotation 
 
-supports job options (more info with cg help joboptions):
-; **-d number**: distribute subjobs of command over **number** processes
-; **-d sge**: use grid engine to distribute subjobs
+This command can be distributed on a cluster or using multiple with [[joboptions|job options]] (more info with cg help joboptions)
 
 == Category ==
 Process
