--- a/lib/cg_regjoin.wiki
+++ b/lib/cg_regjoin.wiki
@@ -1,7 +1,7 @@
 = Regjoin =
 
 == Format ==
-cg regjoin region_file1 ?region_file2?
+cg regjoin ?region_file1? ?region_file2?
 
 == Summary ==
 join regions in 1 or 2 regionfiles
@@ -11,6 +11,7 @@ Regions files are tab separated files that contain regions using the columns
 chromosome, begin, end. Regions must be sorted.
 regjoin joins all overlapping or adjoined regions into
 one region. The resulting regions files is written to stdout.
+If no arguments are given, a region file should be entered via stdin
 
 == Arguments ==
 ; **region_file1**: regions file
