jobsystem.wiki update: correct description of -ptargets

--- a/docs/jobsystem.wiki
+++ b/docs/jobsystem.wiki
@@ -109,15 +109,17 @@ foreach file [jobglob test*.tsv] {
 }
 }}}
 ; -rmtargets rmtargets: This job will have the removal of given files as target
-; -ptargets patterntargets: If a job will make targets that cannot (easily) be determined when
-the (submission) program is run, the targets can be given using a wildcard matching all output.
-Try to avoid its use: On a cluster it means the submission program has to
-wait (keep running on the head node) until this job is finished before it can submit
-dependent jobs. (Normally all jobs are submitted in one go with dependencies between
-them given to the cluster managment system)
+; -ptargets patterntargets: avoid the use of this option; it only works on local distribution.
+Here it can be used when a job will make targets that cannot (easily) be determined when
+the (submission) program is run. The (p)targets can be given using a wildcard pattern matching all output.
+On local distribution, all jobs with dependencies matching the pattern are postponed until
+this job is done. Distribution on a cluster is not compatible with this model as there all jobs 
+are submitted in one go with dependencies between them given to the cluster managment system.
+(You could run a program using this option on a cluster by rerunning the submission program
+after the ptargets job is finished.)
 ; -io io: give value > 1 if job is heavy on io (in sge, translates to (soft) job options: -l io=$value) 
 ; -cores numcores: give value > 1 if job uses more than 1 core (on sge hard option: "-pe local $value" if local_pe is defined)
-; -mem memorysize: indication of momory needed (on sge (hard): -l mem_free=$value)
+; -mem memorysize: indication of memory needed (on sge (hard): -l mem_free=$value)
 ; -hard hardlimits: on sge: extra options passed on as hard limits
 ; -soft softlimits: on sge: extra options passed on as soft limits
 
@@ -130,7 +132,7 @@ at that stage of the program (targets of previous jobs)
 
 == job_wait ==
 job_wait must be added at the end of the program. It will wait (if needed) for all jobs to finish.
-This is not actually do something for direct runs (jobs are executed directly) or on a cluster
+This does not actually do something for direct runs (jobs are executed directly) or on a cluster
 (sge submits jobs directly with the needed dependencies), but is required for the proper
 functioning of locally distributed processing using workers (-d number).
 Here it will manage the processes.
