--- a/lib/cg_index.wiki
+++ b/lib/cg_index.wiki
@@ -15,6 +15,8 @@ but can take a significant amount of disc space
 
 == Arguments ==
 ; **tsvfile**: file to index
+
+== Options ==
 ; **-refdir filename**: filename of a directory that contains the reference databases (genome sequence, annotion, etc.) for the build the file is based on
 ; **-colinfo**: gather information on content of all columns, and save this into the index directory
 ; **-db 'databasename tablename'**
