--- a/lib/cg_regextract.wiki
+++ b/lib/cg_regextract.wiki
@@ -1,20 +1,22 @@
 = Regextract =
 
 == Format ==
-cg regextract ?options? cutoff file1 file2 ...
+cg regextract ?options? cutoff file1 ?file2? ...
 
 == Summary ==
-Find regions above or below a given cutoff.
+Find regions above or below a given cutoff in a bam, bcol or tsv file.
 
 == Description ==
-Write a regionsfile to stdout that contains all regions in the given files that
-are above or below a given cutoff. Each file contains data for one chromosome.
-Chromosome name is taken from the filename by splitting on "-", and taking 
-the second element.
+Write a regionsfile to stdout that contains all regions in the given file(s) that
+are above or below a given cutoff. 
+
+If there is no chromosome data in the input files (tsv without chromosome), the chromosome name is
+taken from the filename by splitting on "-", and taking the second
+element.
 
 == Arguments ==
 ; **cutoff**: cutoff
-; **file1**: file containing position and value columns, or bcol file.
+; **file1**: file containing (chromosome,) position and value columns, or bcol file.
 ; **...**: other files
  
 == Options ==
