--- a/lib/cg_lz4.wiki
+++ b/lib/cg_lz4.wiki
@@ -15,9 +15,14 @@ some compression.
 
 == Options ==
 supports options:
-; **-k**: keep the original uncompressed file if 1 (default 0)
-; **-c**: compression level, where 1 = fast compression and 9 = high compression (default 1)
-At high compression (9), compression is slower than gzip, but decompression is still much faster
+; -k 0/1 (--keep): keep the original uncompressed file if 1 (default 0)
+; -c number (--compressionlevel): compression level, where 1 = fast compression and 9 = high compression (default 9)
+At high compression (9), compression level and speed is similar to gzip, but decompression is still an 
+order of magnitude faster
+; -b number (--blocksize): number indicating the blocksize where: 4 = 64KB, 5 = 256KB, 6 = 1MB, 7 = 4MB (default 5)
+; -i 0/1 (--index): also create an lz4 index file
+; -o filename (--outputfile): The compressed file will be written to **filename**. 
+If the --keep option is not explicitely given, using -o will change the "default" for -k to 1.
 
 == Category ==
 Tools
